Mon Jun 25 15:36:55 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/config-sunos5.7.h: Added support for GCC 3.0.  Thanks to
	  Craig Ching <cching@mqsoftware.com> for contributing this.

Mon Jun 25 12:18:41 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/aix_shr:

          Added to filter the duplicate symbol warnings from the compilation
          of the shr.o file for AIX shared libraries.

        * include/makeinclude/platform_aix_ibm.GNU:

          Added the definition of SHR_FILTER.  It is defined to be
          $(ACE_ROOT)/bin/aix_shr.

        * include/makeinclude/rules.lib.GNU:

          Added the GNU Make macro SHR_FILTER which will be used when
          compiling the shr.o file.  This will only have an affect if
          SHR_FILTER is defined.

Mon Jun 25 10:05:37 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Malloc_T.cpp (avail_chunks): Guarded againt the case when a
	  Malloc_Header contains 0 available header for allocation as it
	  caused an assignment of negative number to an unsigned number.
	  Thanks to Ben Howard <Benn_Howard@raytheon.com> for pointing
	  this out.

Sun Jun 24 21:51:10 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Obstack.h: Moved the trailing semicolon into the
	  ACE_EXPORT_SINGLETON_DECLARATION macro to avoid a warning from
	  Tru65.

Sun Jun 24 08:57:26 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * bin/auto_run_tests.lst: Added Oneways_Invoking_Twoways to the
          daily builds.

Sat Jun 23 08:34:54 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * tests/Max_Default_Port_Test.cpp: Fixed a unused warning in
          Single Threaded  builds.

        * tests/run_tests.lst: Prevented the above test from running in
          Single Threaded configurations.

Sat Jun 23 06:19:39 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/OS.i: For some god knows why reason, _POSIX_C_SOURCE doesn't