@@ -192,6 +192,12 @@ public:
    */
   static int end_event_loop (void);
 
+  /**
+   * Resets the <ACE_Proactor::end_event_loop_> static so that the
+   * <run_event_loop> method can be restarted.
+   */
+  static int void reset_event_loop (void);
+
   /// Report if the <ACE_Proactor::instance> event loop is finished.
   static int event_loop_done (void);
 
